[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/PoolBallEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/JumperEnemy.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Sprites/enemy_basic_walk_blue.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Sprites/enemy_basic_head_blue.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Sprites/enemy_basic_blue.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Sprites/enemy_basic_roll_blue.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[node name="JumperEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Idle" parent="Body" index="0"]
visible = false
texture = ExtResource( 5 )

[node name="Walk" parent="Body" index="1"]
texture = ExtResource( 3 )

[node name="Roll" parent="Body" index="2"]
visible = true
texture = ExtResource( 6 )

[node name="HeadPop" parent="Body" index="3"]
visible = true
texture = ExtResource( 4 )

[node name="TrailParticles" parent="." index="7"]
texture = ExtResource( 6 )

[node name="PlayerDetect" type="Area2D" parent="." index="8"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect" index="0"]
shape = SubResource( 1 )

[node name="ShockwaveArea" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShockwaveArea" index="0"]
shape = SubResource( 2 )

[node name="JumpTween" type="Tween" parent="." index="10"]

[node name="DamageCooldownTimer" type="Timer" parent="." index="11"]
one_shot = true

[node name="CollisionResetTimer" type="Timer" parent="." index="12"]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="DamageCooldownTimer" to="." method="_on_DamageCooldownTimer_timeout"]
[connection signal="timeout" from="CollisionResetTimer" to="." method="_on_CollisionReset_timeout"]
